bamboo-k8s/minikube/bamboo-kibana/kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bamboo-kibana
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bamboo-kibana
  template:
    metadata:
      labels:
        app: bamboo-kibana
    spec:
      containers:
        - name: bamboo-kibana
          image: docker.elastic.co/kibana/kibana:8.11.0
          resources:
            limits:
              memory: "1Gi"
              cpu: "1500m"
            requests:
              cpu: 250m
              memory: 1Gi
          ports:
            - name: bamboo-kibana
              containerPort: 5601
          volumeMounts:
            - name: kibana-config
              mountPath: /usr/share/kibana/config
      volumes:
        - name: kibana-config
          configMap:
            name: kibana-config
